--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -72,6 +72,9 @@
    </property>
   </action>
   <action name="actionSelfStarting">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>开机自启动</string>
    </property>
